feat: create measurement with mqtt
