# routes/device.go
@@ -11,8 +11,10 @@ func DeviceRoutes(r *gin.Engine, controllers *controllers.DeviceController) {
 	apiAuth := r.Group("/api/device")
 	apiAuth.Use(middlewares.Auth())
 	{
-		apiAuth.GET("/list", controllers.DeviceList)
 		apiAuth.POST("/", controllers.DeviceRegister)
+		apiAuth.GET("/list", controllers.DeviceList)
 		apiAuth.DELETE("/", controllers.DeviceDelete)
+		apiAuth.GET("/:uuid", controllers.DeviceProfile)
+		apiAuth.DELETE("/:uuid", controllers.DeviceDelete)
 	}
 }
